[package]
name = "solana-swap-program-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
tester = { git = "https://github.com/stackclass/tester.git", tag = "v0.4.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# Mollusk dependencies
mollusk-svm = "0.9.0"
mollusk-svm-programs-token = "0.9.0"

# Solana SDK dependencies
solana-account = "3.2.0"
solana-instruction = "3.0"
solana-instruction-error = "2.0"
solana-program-option = "3.0"
solana-pubkey = "4.0"
solana-program-pack = "3.0"
solana-rent = "3.0"
solana-system-program = "3.1.0"

# SPL Token dependencies
spl-token-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"
